# githops

./: .gitignore  Cargo.toml  README.md
.github/workflows/: bump.yml  ci.yml  release.yml
docs/en/: comparison.md  env-vars.md  features-caching.md  features-graph-ui.md  features-includes.md  features-parallelization.md  features-templates.md  features-yaml-schema.md  getting-started.md  intro.md  migration.md  upgrading.md
docs/ru/: comparison.md  env-vars.md  features-caching.md  features-graph-ui.md  features-includes.md  features-parallelization.md  features-templates.md  features-yaml-schema.md  getting-started.md  intro.md  migration.md  upgrading.md
githops-core/: Cargo.toml  githops.schema.json
githops-core/src/: cache.rs  config.rs  git.rs  hooks.rs  lib.rs  sync_hooks.rs
githops-core/tests/: integration_test.rs
graphui/: Cargo.toml  build.rs
graphui/src/: lib.rs
graphui/ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
graphui/ui/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
graphui/ui/src/components/: CachePanel.tsx  CommandsPanel.tsx  DefinitionsPanel.tsx  FlowGraph.tsx  HookPanel.tsx  IncludesPanel.tsx
graphui/ui/src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  fieldset.tsx  index.ts  input.tsx  select.tsx  switch.tsx  table.tsx
graphui/ui/src/hooks/: useGithopsWs.ts
graphui/ui/src/i18n/: en_US.json  index.ts  ru_RU.json
graphui/ui/src/pages/: DocsPage.tsx
npm/: .gitignore  install.js  package.json  prepublish.js
scripts/: release.py  stamp-npm-version.js  stamp-version.py
src/: cli.rs  lib.rs  logger.rs  main.rs
src/commands/: cache.rs  check.rs  completions.rs  destroy.rs  init.rs  list_hooks.rs  migrate.rs  mod.rs  schema.rs  self_update.rs  sync.rs
wix/: main.wxs
