[workspace]
members = [".", "githops-core", "graphui"]
default-members = [".", "githops-core", "graphui"]
resolver = "2"

[package]
name = "githops"
version = "0.1.0"
edition = "2024"
description = "Git hooks manager with YAML configuration"

[lib]
name = "githops"
path = "src/lib.rs"

[[bin]]
name = "githops"
path = "src/main.rs"

[[bin]]
name = "gen-schema"
path = "src/bin/gen_schema.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
anyhow = "1"
colored = "2"
githops-core = { path = "githops-core" }
graphui = { path = "graphui" }
