[workspace]
members = [".", "githops-core", "graphui"]
default-members = [".", "githops-core", "graphui"]
resolver = "2"

[package]
name = "githops"
version = "0.1.0"
edition = "2024"
description = "Git hooks manager with YAML configuration"
authors = ["Vitali Haradkou <vitalics@gmail.com>"]
homepage = "https://github.com/vitalics/githops"
repository = "https://github.com/vitalics/githops"
license = "MIT"
keywords = ["git", "hooks", "cli", "yaml", "devtools"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "graphui/ui/node_modules/",
    "graphui/ui/src/",
    "docs/",
    ".github/",
    "*.md",
]

[lib]
name = "githops"
path = "src/lib.rs"

[[bin]]
name = "githops"
path = "src/main.rs"

[[bin]]
name = "gen-schema"
path = "src/bin/gen_schema.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5"
self_update = { version = "0.40", default-features = false, features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
    "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
anyhow = "1"
colored = "2"
githops-core = { path = "githops-core", version = "0.1.0" }
graphui = { path = "graphui", version = "0.1.0" }
