[package]
name = "githops-core"
version = "0.1.0"
edition = "2024"
description = "Core library for githops — config parsing, hook syncing, caching"
authors = ["Vitali Haradkou <vitalics@gmail.com>"]
homepage = "https://github.com/vitalics/githops"
repository = "https://github.com/vitalics/githops"
license = "MIT"
keywords = ["git", "hooks", "yaml", "config"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
anyhow = "1"
colored = "2"
glob = "0.3"
sha2 = "0.10"
toml = "0.8"
ureq = "2"

[dev-dependencies]
tempfile = "3"
